SONAR-20021 Add filter and facets for Software Quality, Severity and Clean Code Attribute Category
- Refactor issue indexer to use MyBatis mapping with cursor